k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    project: soxnanna-portfolio
    environment: production
